macros/blueprint-macro/tests/invalid_cases/03_invalid_params_syntax.stderr
error: expected `,`
  --> tests/invalid_cases/03_invalid_params_syntax.rs:10:16
   |
10 | #[job(params(n t), result(Bytes))]
   |                ^
